# ncnn-android-nailseg

./: local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: sim.param
app/src/main/java/com/tencent/SegNcnn/: MainActivity.java  SegNcnn.java
app/src/main/jni/: CMakeLists.txt  seg.cpp  seg.h  seg_jni.cpp
app/src/main/res/values/: strings.xml
